        - Improve URL generation in Phonebook::Controller::Search
        - Redirect from /people/ and /units/ to /
        - Refactor old application redirect handling into
          Phonebook::Controller::People
        - Hide unit if person is in REGISTRAR STUDENTS
        - Change "people in unit" URLs to be /units/UFID/people/
          instead of /people/unit/UFID/

0.17  Wed Apr  5 18:03:04 EDT 2006
        - Refactor organization name to configuration file
        - Remove escaping in root/people/vcard.tt even though RFC 2426
          implies that it's necessary, because it causes problems in
          Outlook
        - Add a few more items to the vCard

0.16  Fri Mar 10 19:27:16 EST 2006
        - Refactor search.js for more sensible default value storage

0.15  Thu Mar  9 20:08:38 EST 2006
        - Change search.js to activate the form onfocus instead of
          onclick

0.14  Thu Feb 16 01:06:45 EST 2006
        - Fix source selection JavaScript
        - Make secondary page search form behave like index search form

0.13  Wed Feb 15 23:47:50 EST 2006
        - Move CSS up one directory to simplify image references

0.12  Wed Feb 15 20:29:38 EST 2006
        - Pull JavaScript from search.ufl.edu

0.11  Tue Feb 14 16:35:49 EST 2006
        - Add redirects for uid and cn searches against show.cgi and
          show-full.cgi

0.10  Mon Feb 13 13:49:20 EST 2006
        - Strip period at end of first name for "first initial last
          name" searches
        - Add default affiliation restriction for people in unit

0.09  Thu Feb  9 16:44:51 EST 2006
        - Don't redirect to the search page from display_form.cgi if
          no query is specified
        - Make Test::WWW::Mechanize::Catalyst a build-time dependency
        - Use wildcard on last name when searching for e.g. "First
          Last"

0.08  Thu Feb  9 16:13:29 EST 2006
        - Add redirect for old search.ufl.edu form

0.07  Wed Feb  8 16:15:50 EST 2006